# green_ranger

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d5b27e0c58e4_create_db_initial_migration.py
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/endpoints/: __init__.py  user.py
backend/app/core/: base.py  config.py  db.py  user.py
backend/app/models/: __init__.py  damage.py  enums.py  photo.py  sector.py  team.py  ticket.py  user.py
backend/app/schemas/: user.py
docs/: db_project.sql  таблица_обследования_аварийности_по_физиологическим_нарушениям.docx
